--- a/SubtitleAutomatorGradle/build.gradle
+++ b/SubtitleAutomatorGradle/build.gradle
@@ -19,6 +19,7 @@ dependencies {
  compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
  compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.1'
  compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+ compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
  
 }
 
