--- a/SubtitleAutomatorGradle/build.gradle
+++ b/SubtitleAutomatorGradle/build.gradle
@@ -20,6 +20,8 @@ dependencies {
  compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.1'
  compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
  compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+ compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.12'
+ compile group: 'com.github.junrar', name: 'junrar', version: '0.7'
  
 }
 
