--- a/SubtitleAutomatorGradle/settings.gradle
+++ b/SubtitleAutomatorGradle/settings.gradle
@@ -7,12 +7,4 @@
  * Detailed information about configuring a multi-project build in Gradle can be found
  * in the user guide at https://docs.gradle.org/3.5/userguide/multi_project_builds.html
  */
-
-/*
-// To declare projects as part of a multi-project build use the 'include' method
-include 'shared'
-include 'api'
-include 'services:webservice'
-*/
-
-rootProject.name = 'SubtitleAutomatorGradle'
+include 'subtitle-core' , 'subtitle-ui'
