created a real object pool for connection objects to subtitle sites. subtitle zips are now not downloaded if the file already exists, scan interval increased from 5s to 60s

--- a/SubtitleAutomatorGradle/subtitle-core/build.gradle
+++ b/SubtitleAutomatorGradle/subtitle-core/build.gradle
@@ -26,5 +26,6 @@ dependencies {
  compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
  compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.12'
  compile group: 'com.github.junrar', name: 'junrar', version: '0.7'
+ compile group: 'com.github.chrisvest', name: 'stormpot', version: '2.4.1' 
 }
 
