--- a/SubtitleAutomatorGradle/subtitle-core/.settings/org.eclipse.jdt.core.prefs
+++ b/SubtitleAutomatorGradle/subtitle-core/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Sat Oct 21 18:52:35 EEST 2017
+#Sun Oct 29 15:11:18 EET 2017
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.8
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
