--- a/SubtitleAutomatorGradle/subtitle-core/build.gradle
+++ b/SubtitleAutomatorGradle/subtitle-core/build.gradle
@@ -25,7 +25,10 @@ dependencies {
  compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
  compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
  compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.12'
- compile group: 'com.github.junrar', name: 'junrar', version: '0.7'
+compile group: 'com.github.axet', name: 'java-unrar', version: '1.7.0-3'
+
  compile group: 'com.github.chrisvest', name: 'stormpot', version: '2.4.1' 
+compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 }
 
