--- a/SubtitleAutomatorGradle/subtitle-ui/build.gradle
+++ b/SubtitleAutomatorGradle/subtitle-ui/build.gradle
@@ -17,11 +17,20 @@ repositories {
 
 dependencies {
        compile project(':subtitle-core')
-      
        compile "com.gluonhq:charm:4.4.0"
-        
-}
+	   compile group: 'com.github.chrisvest', name: 'stormpot', version: '2.4.1'  
+	   compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+		compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 
+
+}
+jar {
+  manifest {
+    attributes(
+      'Main-Class': 'com.dragoonart.subtitle.finder.ui.StartUI'
+    )
+  }
+}
 sourceSets {
     main {
 		resources {
@@ -31,7 +40,7 @@ sourceSets {
 }
 startScripts {
 	applicationName 'subtitle-finder'
-	mainClassName 'com.dragoonart.subtitle.finder.ui.Main'
+	mainClassName 'com.dragoonart.subtitle.finder.ui.StartUI'
 }
 
 installDist {
