--- a/SubtitleAutomatorGradle/subtitle-ui/.settings/org.eclipse.jdt.core.prefs
+++ b/SubtitleAutomatorGradle/subtitle-ui/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Sat Oct 21 18:52:48 EEST 2017
+#Sat Nov 11 16:14:36 EET 2017
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.8
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
