--- a/SubtitleAutomatorGradle/subtitle-core/build.gradle
+++ b/SubtitleAutomatorGradle/subtitle-core/build.gradle
@@ -22,10 +22,16 @@ dependencies {
  compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.4'
  compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
  compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.1'
- compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
  compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
  compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.12'
 compile group: 'com.github.axet', name: 'java-unrar', version: '1.7.0-3'
+// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
+
+// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.2'
+// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
+compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.2'
 
  compile group: 'com.github.chrisvest', name: 'stormpot', version: '2.4.1' 
 compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
