--- a/SubtitleAutomatorGradle/subtitle-ui/build.gradle
+++ b/SubtitleAutomatorGradle/subtitle-ui/build.gradle
@@ -20,9 +20,8 @@ dependencies {
        compile "com.gluonhq:charm:4.4.0"
 	   compile group: 'com.github.chrisvest', name: 'stormpot', version: '2.4.1'  
 	   compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-		compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
-
-
+	   compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+	   compile group: 'com.jfoenix', name: 'jfoenix', version: '1.4.0'
 }
 jar {
   manifest {
